<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SatFinder</string>
    <string name="version">Version 1.6.3</string>

    <string name="add_satellite">Add Satellite</string>
    <string name="add_satellite_id">Add Satellite ID</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="angle_desc">Graphic showing the angle between the horizon and the satellite.</string>
    <string name="apogee_12345_km">Apogee: 12345 km</string>
    <string name="back">BACK</string>
    <string name="browser">Browser</string>
    <string name="clear_cached_data">Clear Cached Data</string>
    <string name="compass_desc">Compass showing the direction to point your phone towards the satellite.</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="current_position">Current Position:</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="delete_my_user">Delete My User</string>
    <string name="developed_by">Developed By Dror Sheffer</string>
    <string name="display_name_here">DISPLAY NAME HERE</string>
    <string name="edit_display_name">Edit Display Name</string>
    <string name="email_address_here">EMAIL ADDRESS HERE</string>
    <string name="empty">--</string>
    <string name="enter_satellite_id">Enter Satellite ID</string>
    <string name="enter_your_display_name">Enter your display name</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="general_actions">General Actions</string>
    <string name="github_link">🌐 github.com/Delta7Actual/SatFinder</string>
    <string name="home">Home</string>
    <string name="id_12345">ID: 12345</string>
    <string name="inclination">Inclination:</string>
    <string name="inclination_123">Inclination: 123°</string>
    <string name="initializing_location_and_cache">- Initializing location and cache -</string>
    <string name="latitude">Latitude:</string>"
    <string name="locate_prompt">Point your phone towards the satellite. Adjust the phone\'s angle until the arrow turns green.</string>
    <string name="locate_this_satellite">Locate This Satellite!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="longitude">Longitude:</string>
    <string name="mail_link">✉️ dror8464@gmail.com</string>
    <string name="more">More</string>
    <string name="more_contribute"><![CDATA[[ Contribute, Star & Fork on GitHub! ]]]></string>
    <string name="more_par_1">SatFinder helps you locate satellites using built-in sensors, orbital math, and N2YO\'s satellite tracking data.</string>
    <string name="more_par_2">Inspired by ISS Detector, this app is a tribute and an expansion of its brilliance.</string>
    <string name="needle_desc">Needle on the compass indicating the direction of the satellite.</string>
    <string name="next_iss_pass">Next ISS Pass</string>
    <string name="next_visual_pass">Next Visual Pass</string>
    <string name="no_data_available">No data available.</string>
    <string name="notify">Notify</string>
    <string name="options">Options</string>
    <string name="orbital_period_12345_min">Orbital Period: 12345 min</string>
    <string name="perigee_123_km">Perigee: 123 km</string>
    <string name="profile">Profile</string>
    <string name="remove">Remove</string>
    <string name="satellite_elevation_0">Satellite Elevation: 0°</string>
    <string name="satellite_id">Satellite ID</string>
    <string name="satellite_location_reimagined">Satellite Location Reimagined</string>
    <string name="satellite_two_tone">Satellite Two-Tone</string>
    <string name="satfinder">SatFinder</string>
    <string name="satfinder_logo">SatFinder Logo</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_satellite_by_id">Search Satellite by ID</string>
    <string name="settings_title">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="special_thanks">Special Thanks</string>
    <string name="special_thanks_list"><![CDATA[• ISS Detector — Inspiring this app\'s vision\n• N2YO — Satellite tracking suite\n• FlatIcons & Pixabay — Graphical assets]]></string>
    <string name="stop_foreground_updates">Stop Foreground Updates</string>
    <string name="test_api_status">Test API Status</string>
    <string name="test_notification">Test Notification</string>
    <string name="testing_tools">Testing Tools</string>
    <string name="update_cached_data">Update Cached Data</string>
    <string name="welcome_to">Welcome to</string>
    <string name="your_associated_e_mail">Your Associated E-Mail</string>
    <string name="your_current_display_name">Your Current Display Name</string>
    <string name="your_saved_satellites">Your Saved Satellites</string>
    <string name="your_tracked_satellites">Your Tracked Satellites</string>
    <string name="redirecting" tools:ignore="TypographyEllipsis">Redirecting...</string>
    <string name="getting_current_location" tools:ignore="TypographyEllipsis">Getting current location...</string>
    <string name="switch_to_login">Switch to Login</string>
    <string name="switch_to_sign_up">Switch to Sign Up</string>
    <string name="no_iss_sightings_in_the_next_week">No ISS sightings in the next week :)</string>
    <string name="invalid">Invalid</string>
</resources>